typescript/checker/tests/conformance/es2017/useObjectValuesAndEntries2.ts.stderr
error: NoCallSignature {
    span: Span {
        lo: BytePos(
            136,
        ),
        hi: BytePos(
            144,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es2017/useObjectValuesAndEntries2.ts:10:21
   |
10 | var entries = Object.entries(o);
   |                     ^^^^^^^^

